# tmath

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  lake-manifest.json  lakefile.lean  lean-toolchain  pyproject.toml
.github/workflows/: static.yml
Tmath/: Basics.lean  Fnd.lean  Logic.lean
Tmath/Basics/: Logic.lean  Nat.lean
Tmath/Numbers/: Nat.lean
Tmath/Todo/: T0.lean
prose/: community.md  conf.py  index.md
prose/basics/: coc.md  fol.md  fun.md  index.md  lam.md  lean.md  logic.md  nat.md  syn.md
prose/expr/: coc.md  fun.md  index.md  lam.md  lean.md  syn.md
prose/misc/: index.md
tikz/: all-red.tex  bt-ex.tex  church-rosser.tex  conj-red.tex  cp-proof.tex  cp-red.tex  cr-equiv.tex  disj-red.tex  ex-red.tex  imp-ex.tex  imp-red.tex  inft-ex.tex  lt-rel.tex  lxx1.tex  lxx2.tex  lxy.fyx.tex  pqp-lam-red.tex  pqp-lam.tex  succ-rel.tex  syn1.tex  syn2.tex  syn3.tex  syn4.tex  syn5.tex
todo/: SUMMARY.md  coc-slides.md  coc.md  game.md  rels.txt  slides.md  slides2.md
